--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>黄莹 - 项目作品集</title>
+    <title>HUANGYING - 项目作品集</title>
     <meta name="description" content="黄莹的项目作品集 - 展示创新的技术项目和解决方案">
     
     <!-- Firebase SDK -->
@@ -641,7 +641,7 @@
     <!-- 导航栏 -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">黄莹</div>
+            <div class="logo">HUANGYING</div>
             <ul class="nav-menu">
                 <li><a href="#home">首页</a></li>
                 <li><a href="#projects">项目</a></li>
@@ -754,33 +754,61 @@
                     </div>
                 </div>
 
-                <div class="project-card">
-                    <div class="project-image">
-                        <i class="fas fa-robot"></i>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">AI智能助手</h3>
-                        <p class="project-description">
-                            基于自然语言处理技术的智能对话系统，支持多轮对话、情感分析和个性化回复。
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">NLP</span>
-                            <span class="tech-tag">FastAPI</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i>
-                                查看代码
-                            </a>
-                            <a href="#" class="project-link">
-                                <i class="fas fa-play"></i>
-                                体验Demo
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                                 <div class="project-card">
+                     <div class="project-image">
+                         <i class="fas fa-rocket"></i>
+                     </div>
+                     <div class="project-content">
+                         <h3 class="project-title">Astro 现代化网站</h3>
+                         <p class="project-description">
+                             掌握Astro开发与应用，构建高性能的现代化网站。利用Astro的静态站点生成能力和组件化架构，实现卓越的用户体验。
+                         </p>
+                         <div class="project-tech">
+                             <span class="tech-tag">Astro</span>
+                             <span class="tech-tag">TypeScript</span>
+                             <span class="tech-tag">React</span>
+                             <span class="tech-tag">Tailwind CSS</span>
+                         </div>
+                         <div class="project-links">
+                             <a href="#" class="project-link">
+                                 <i class="fab fa-github"></i>
+                                 查看代码
+                             </a>
+                             <a href="https://astro.cflp.ai" class="project-link">
+                                 <i class="fas fa-external-link-alt"></i>
+                                 在线演示
+                             </a>
+                         </div>
+                     </div>
+                 </div>
+
+                 <div class="project-card">
+                     <div class="project-image">
+                         <i class="fas fa-robot"></i>
+                     </div>
+                     <div class="project-content">
+                         <h3 class="project-title">AI智能助手</h3>
+                         <p class="project-description">
+                             基于自然语言处理技术的智能对话系统，支持多轮对话、情感分析和个性化回复。
+                         </p>
+                         <div class="project-tech">
+                             <span class="tech-tag">Python</span>
+                             <span class="tech-tag">TensorFlow</span>
+                             <span class="tech-tag">NLP</span>
+                             <span class="tech-tag">FastAPI</span>
+                         </div>
+                         <div class="project-links">
+                             <a href="#" class="project-link">
+                                 <i class="fab fa-github"></i>
+                                 查看代码
+                             </a>
+                             <a href="#" class="project-link">
+                                 <i class="fas fa-play"></i>
+                                 体验Demo
+                             </a>
+                         </div>
+                     </div>
+                 </div>
 
                 <!-- 添加更多项目的占位卡片 -->
                 <div class="project-card" style="background: rgba(255, 255, 255, 0.05); border: 2px dashed rgba(255, 255, 255, 0.2);">
@@ -819,14 +847,15 @@
                         </div>
                         前端开发
                     </h3>
-                    <div class="skill-items">
-                        <span class="skill-item">React</span>
-                        <span class="skill-item">Vue.js</span>
-                        <span class="skill-item">TypeScript</span>
-                        <span class="skill-item">Next.js</span>
-                        <span class="skill-item">Tailwind CSS</span>
-                        <span class="skill-item">SCSS</span>
-                    </div>
+                                         <div class="skill-items">
+                         <span class="skill-item">React</span>
+                         <span class="skill-item">Vue.js</span>
+                         <span class="skill-item">Astro</span>
+                         <span class="skill-item">TypeScript</span>
+                         <span class="skill-item">Next.js</span>
+                         <span class="skill-item">Tailwind CSS</span>
+                         <span class="skill-item">SCSS</span>
+                     </div>
                 </div>
 
                 <div class="skill-category">
@@ -899,7 +928,7 @@
                         <i class="fas fa-envelope contact-icon"></i>
                         <div>
                             <div style="font-weight: 600;">邮箱联系</div>
-                            <div style="font-size: 0.9rem; opacity: 0.8;">your.email@example.com</div>
+                            <div style="font-size: 0.9rem; opacity: 0.8;">huangying.just@gmail.com</div>
                         </div>
                     </a>
                     
@@ -926,7 +955,7 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <p>© 2025 黄莹 - 项目作品集 | 基于 Firebase Hosting 构建</p>
+            <p>© 2025 HUANGYING - 项目作品集 | 基于 Firebase Hosting 构建</p>
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
                 <span id="firebase-status">正在加载 Firebase SDK...</span>
             </p>
