refactor: 更新博客文章日期从2025-01-27到2025-07-27
- 重命名所有博客文章文件，调整发布日期
- 更新articles.json中的文件引用
- 保持文章内容不变，仅修正日期信息

--- a/public/index.html
+++ b/public/index.html
@@ -1749,9 +1749,9 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <p>© 2025 HUANGYING - 项目作品集 | 基于 Firebase Hosting 构建</p>
+            <p>© 2025 Synchronize Intelligence</p>
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <span id="firebase-status">正在加载 Firebase SDK...</span>
+                <span id="firebase-status">Powered by Firebase</span>
             </p>
         </div>
     </footer>
